# nes-emu

./: Cargo.toml  README.md  index-320f752bbcf6c07.js  index-320f752bbcf6c07_bg.wasm  index-33efba55184a5243.js  index-33efba55184a5243_bg.wasm  index-38618e54df5f9362.js  index-38618e54df5f9362_bg.wasm  index-5775abdccc17e913.js  index-5775abdccc17e913_bg.wasm  index-6a1f97731d3cde96.js  index-6a1f97731d3cde96_bg.wasm  index-76c3aaab416ea54e.js  index-76c3aaab416ea54e_bg.wasm  index-a7ef94790c921202.js  index-a7ef94790c921202_bg.wasm  index-ad57760680096555.js  index-ad57760680096555_bg.wasm  index-b3c1e10667c3de66.js  index-b3c1e10667c3de66_bg.wasm  index-f635925c87f4431f.js  index-f635925c87f4431f_bg.wasm  index.html  nes-emu-f8e5e91c605a74a4.js  nes-emu-f8e5e91c605a74a4_bg.wasm
.github/workflows/: gh-pages.yml
script/: snake.asm
src/: bus.rs  instruction.rs  joypad.rs  lib.rs  main.rs  random_gen.rs  screen.rs  traits.rs
src/cpu/: instruction.rs  mod.rs  register.rs  registers.rs  test.rs
src/joypad/: button.rs  mod.rs
tests/: cpu.rs
