[package]
name = "nes-emu"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3"
gloo-render = "0.1.0"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.79"
yew = "0.19.3"
js-sys = "0.3.56"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]
